tests/manual/corelib/qdatastream/qdatastream.pro
@@ -1,0 +1,6 @@
+CONFIG += testcase
+
+SOURCES += tst_manualqdatastream.cpp
+QT = core testlib
+
+TARGET = tst_manual_qdatastream
